--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "target_name = \"princessdiana\"\n",
     "\n",
-    "target_class = \"woman\""
+    "target_class = \"person\""
    ]
   },
   {
@@ -141,9 +141,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_length = \"medium\"\n",
+    "run_length = \"high\"\n",
     "\n",
-    "spicy_mode = False"
+    "spicy_mode = True"
    ]
   },
   {
@@ -396,44 +396,6 @@
     " --ddim_eta 0.0 \\\n",
     " --n_samples {sample_n} \\\n",
     " --n_iter {sample_n} \\\n",
-    " --seed 2603348708 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"A beautiful portrait of a {target_token} with diamonds and glittering skin, a detailed painting by greg rutkowski and raymond swanland, featured on cgsociety, fantasy art, detailed painting, artstation hd, photorealistic, fantasy, intricate, elegant, rainbow bubbles, highly detailed, digital painting\" \\\n",
-    " --outloc \"{target_name}_ethereal\" \\\n",
-    " --outdir \"outputs/{target_name}_ethereal\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 4085433209 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"Up close portrait of a beautiful {target_token} in black and white, photorealistic, upper body, art by diego fazio and diegokoi and artgerm, concept art, hyper sharp focus, 8k highly detailed\" \\\n",
-    " --outloc \"{target_name}_blackwhite\" \\\n",
-    " --outdir \"outputs/{target_name}_blackwhite\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
     " --seed 69 \\\n",
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
@@ -453,30 +415,11 @@
     " --ddim_eta 0.0 \\\n",
     " --n_samples {sample_n} \\\n",
     " --n_iter {sample_n} \\\n",
-    " --seed 1201562208 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"A soft and breathtaking detailed painting of a {target_token} with a crown on their head in the style of gustav klimt, shiny gold, elegant, highly detailed, artstation, fluo colors, concept art, matte, sharp focus, art by gustav klimt and alphonse mucha\" \\\n",
-    " --outloc \"{target_name}_crown\" \\\n",
-    " --outdir \"outputs/{target_name}_crown\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
     " --seed 3491584590 \\\n",
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
     " --ckpt {model_path} \\\n",
-    " --prompt \"bioshock {target_token} as big sister portrait, intricate, elegant, highly detailed, digital painting, artstation, concept art, smooth, sharp focus, illustration, art by artgerm and greg rutkowski and alphonse mucha\" \\\n",
+    " --prompt \"bioshock {target_token} character portrait, intricate, elegant, highly detailed, digital painting, artstation, concept art, smooth, sharp focus, illustration, art by artgerm and greg rutkowski and alphonse mucha\" \\\n",
     " --outloc \"{target_name}_bioshock\" \\\n",
     " --outdir \"outputs/{target_name}_bioshock\""
    ]
@@ -615,6 +558,83 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"an abstract painting of {target_token}, painting, artstation, concept art, smooth, art by Pablo Picasso, Salvador Dali\" \\\n",
+    " --outloc \"{target_name}_flowers\" \\\n",
+    " --outdir \"outputs/{target_name}_flowers\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"Portrait of {target_token} as beautiful elf, 8 k, ultra hd, highly detailed, by wlop, trending on artstation\n",
+    "\" \\\n",
+    " --outloc \"{target_name}_elf\" \\\n",
+    " --outdir \"outputs/{target_name}_elf\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"{target_token} portrait wearing fantastic Hand-dyed cotton clothes, embellished beaded feather decorative fringe knots ,colorful pigtail,subtropical flowers and plants,symmetrical face,intricate,elegant,highly detailed,8k,digital painting,trending on pinterest,harper's bazaar,concept art, sharp focus, illustration, by artgerm,Tom Bagshaw,Lawrence Alma-Tadema,greg rutkowski,alphonse Mucha\" \\\n",
+    " --outloc \"{target_name}_cotton\" \\\n",
+    " --outdir \"outputs/{target_name}_cotton\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"digital photograph of {target_token} as a muppet. hyper realistic. super detailed. beautiful lighting. delicate felt. Puppet by Jim Henson.\" \\\n",
+    " --outloc \"{target_name}_muppet\" \\\n",
+    " --outdir \"outputs/{target_name}_muppet\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -650,21 +670,21 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   },
   "vscode": {
    "interpreter": {
