--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -635,6 +635,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"digital photograph of {target_token} as a professional wrestler. 80s colors. spandex. in the style of Ultimate Warrior. dramatic pose. super detailed 4k. theatrical stage lighting.\" \\\n",
+    " --outloc \"{target_name}_muppet\" \\\n",
+    " --outdir \"outputs/{target_name}_muppet\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
