--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -457,25 +457,6 @@
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
     " --ckpt {model_path} \\\n",
-    " --prompt \"digital painting of {target_token} cosmic background, scenery landscape, professional, award - winning, trending on artstation, hyper detailed, realistic, beautiful, emotional, shiny, golden, picture\" \\\n",
-    " --outloc \"{target_name}_cosmic\" \\\n",
-    " --outdir \"outputs/{target_name}_cosmic\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 1337 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
     " --prompt \"{target_token} cosmic background realistic shaded perfect face, fine details by realistic shaded lighting poster by ilya kuvshinov katsuhiro otomo, magali villeneuve, artgerm, jeremy lipkin and michael garmash and rob rey\" \\\n",
     " --outloc \"{target_name}_cosmic2\" \\\n",
     " --outdir \"outputs/{target_name}_cosmic2\""
@@ -649,8 +630,27 @@
     " --ddim_steps 100 \\\n",
     " --ckpt {model_path} \\\n",
     " --prompt \"digital photograph of {target_token} as a professional wrestler. 80s colors. spandex. in the style of Ultimate Warrior. dramatic pose. super detailed 4k. theatrical stage lighting.\" \\\n",
-    " --outloc \"{target_name}_muppet\" \\\n",
-    " --outdir \"outputs/{target_name}_muppet\""
+    " --outloc \"{target_name}_wrestler\" \\\n",
+    " --outdir \"outputs/{target_name}_wrestler\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " !python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"{target_name} art nouveau portrait in the style of alphonse Mucha, digital painting, Alphonse Mucha\" \\\n",
+    " --outloc \"{target_name}_nouveau\" \\\n",
+    " --outdir \"outputs/{target_name}_nouveau\""
    ]
   },
   {
