Fix folder name

--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -553,8 +553,8 @@
     " --ddim_steps 100 \\\n",
     " --ckpt {model_path} \\\n",
     " --prompt \"an abstract painting of {target_token}, painting, artstation, concept art, smooth, art by Pablo Picasso, Salvador Dali\" \\\n",
-    " --outloc \"{target_name}_flowers\" \\\n",
-    " --outdir \"outputs/{target_name}_flowers\""
+    " --outloc \"{target_name}_abstract\" \\\n",
+    " --outdir \"outputs/{target_name}_abstract\""
    ]
   },
   {
