--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -143,7 +143,7 @@
    "source": [
     "run_length = \"high\"\n",
     "\n",
-    "spicy_mode = True"
+    "spicy_mode = False"
    ]
   },
   {
@@ -552,25 +552,6 @@
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
     " --ckpt {model_path} \\\n",
-    " --prompt \"an abstract painting of {target_token}, painting, artstation, concept art, smooth, art by Pablo Picasso, Salvador Dali\" \\\n",
-    " --outloc \"{target_name}_abstract\" \\\n",
-    " --outdir \"outputs/{target_name}_abstract\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 1694397999 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
     " --prompt \"Portrait of {target_token} as beautiful elf, 8 k, ultra hd, highly detailed, by wlop, trending on artstation\n",
     "\" \\\n",
     " --outloc \"{target_name}_elf\" \\\n",
@@ -651,6 +632,25 @@
     " --prompt \"{target_name} art nouveau portrait in the style of alphonse Mucha, digital painting, Alphonse Mucha\" \\\n",
     " --outloc \"{target_name}_nouveau\" \\\n",
     " --outdir \"outputs/{target_name}_nouveau\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " !python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"painterly portrait of {target_name} as a pirate. digital painting. trending on artstation. By Greg Rutkowski\" \\\n",
+    " --outloc \"{target_name}_pirate\" \\\n",
+    " --outdir \"outputs/{target_name}_pirate\""
    ]
   },
   {
