--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -610,7 +610,7 @@
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
     " --ckpt {model_path} \\\n",
-    " --prompt \"digital photograph of {target_token} as a professional wrestler. 80s colors. spandex. in the style of Ultimate Warrior. dramatic pose. super detailed 4k. theatrical stage lighting.\" \\\n",
+    " --prompt \"digital photograph of {target_token} as a professional wrestler. 80s colors. spandex. in the style of Wrestlemania. dramatic pose. super detailed 4k. theatrical stage lighting.\" \\\n",
     " --outloc \"{target_name}_wrestler\" \\\n",
     " --outdir \"outputs/{target_name}_wrestler\""
    ]
