switch bioshock to steam punk

--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -415,13 +415,13 @@
     " --ddim_eta 0.0 \\\n",
     " --n_samples {sample_n} \\\n",
     " --n_iter {sample_n} \\\n",
-    " --seed 3491584590 \\\n",
+    " --seed 69 \\\n",
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
     " --ckpt {model_path} \\\n",
-    " --prompt \"bioshock {target_token} character portrait, intricate, elegant, highly detailed, digital painting, artstation, concept art, smooth, sharp focus, illustration, art by artgerm and greg rutkowski and alphonse mucha\" \\\n",
-    " --outloc \"{target_name}_bioshock\" \\\n",
-    " --outdir \"outputs/{target_name}_bioshock\""
+    " --prompt \"portrait of {target_token} cyberpunk neon - bordered cyborg, 7 0 mm focal length, by ilya kuvshinov, krenz cushart, Greg Rutkowski, trending on artstation sharp focus illustration, aesthetic, very inspirational, arthouse\" \\\n",
+    " --outloc \"{target_name}_cyborg\" \\\n",
+    " --outdir \"outputs/{target_name}_cyborg\""
    ]
   },
   {
