Add more default prompts

--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -453,25 +453,6 @@
     " --ddim_eta 0.0 \\\n",
     " --n_samples {sample_n} \\\n",
     " --n_iter {sample_n} \\\n",
-    " --seed 1337 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"{target_token} cosmic background realistic shaded perfect face, fine details by realistic shaded lighting poster by ilya kuvshinov katsuhiro otomo, magali villeneuve, artgerm, jeremy lipkin and michael garmash and rob rey\" \\\n",
-    " --outloc \"{target_name}_cosmic2\" \\\n",
-    " --outdir \"outputs/{target_name}_cosmic2\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
     " --seed 1694397999 \\\n",
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
@@ -479,25 +460,6 @@
     " --prompt \"a beautiful portrait of {target_token}, with isolated flowers with strong dark comic outlines, colorful, psychedelic, intricate, elegant, highly detailed, digital painting, artstation, concept art, smooth, sharp focus, illustration, art by artgerm and greg rutkowski and alphonse mucha\" \\\n",
     " --outloc \"{target_name}_flowers\" \\\n",
     " --outdir \"outputs/{target_name}_flowers\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 2148934030 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"{target_token}, portrait shinkai makoto studio ghibli studio key hideaki anno sakimichan stanley artgerm lau rossdraws james jean marc simonetti elegant highly detailed digital painting artstation pixiv\" \\\n",
-    " --outloc \"{target_name}_ghibli\" \\\n",
-    " --outdir \"outputs/{target_name}_ghibli\""
    ]
   },
   {
@@ -651,6 +613,44 @@
     " --prompt \"painterly portrait of {target_name} as a pirate. digital painting. trending on artstation. By Greg Rutkowski\" \\\n",
     " --outloc \"{target_name}_pirate\" \\\n",
     " --outdir \"outputs/{target_name}_pirate\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " !python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"painting of {target_name} riding a unicorn leaping over a rainbow. swinging a sword, wearing armor. fantastical. Black night with galaxies and stars. Star dust trail. ultrafine detail. 8k. 4k. digital painting. trending on artstation. Painted by Courtney Karp and Greg Rutkowski.\" \\\n",
+    " --outloc \"{target_name}_unicorn\" \\\n",
+    " --outdir \"outputs/{target_name}_unicorn\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " !python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"Portrait of {target_name}. concept art style, trending on artstation, soft lighting, ultrafine detail.\" \\\n",
+    " --outloc \"{target_name}_concept\" \\\n",
+    " --outdir \"outputs/{target_name}_concept\""
    ]
   },
   {
