update(notebook): remove male weighted prompts

--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -396,63 +396,6 @@
     " --ddim_eta 0.0 \\\n",
     " --n_samples {sample_n} \\\n",
     " --n_iter {sample_n} \\\n",
-    " --seed 69 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"digital painting of {target_token} by greg rutkowski neon cyberpunk\" \\\n",
-    " --outloc \"{target_name}_cyberpunk\" \\\n",
-    " --outdir \"outputs/{target_name}_cyberpunk\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 69 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"portrait of {target_token} cyberpunk neon - bordered cyborg, 7 0 mm focal length, by ilya kuvshinov, krenz cushart, Greg Rutkowski, trending on artstation sharp focus illustration, aesthetic, very inspirational, arthouse\" \\\n",
-    " --outloc \"{target_name}_cyborg\" \\\n",
-    " --outdir \"outputs/{target_name}_cyborg\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 69 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"portrait of {target_token} cyberpunk neon - bordered cyborg, 7 0 mm focal length, by ilya kuvshinov, krenz cushart, Greg Rutkowski, trending on artstation sharp focus illustration, aesthetic, very inspirational, arthouse\" \\\n",
-    " --outloc \"{target_name}_cyborg\" \\\n",
-    " --outdir \"outputs/{target_name}_cyborg\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
     " --seed 1694397999 \\\n",
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
@@ -491,31 +434,11 @@
     " --ddim_eta 0.0 \\\n",
     " --n_samples {sample_n} \\\n",
     " --n_iter {sample_n} \\\n",
-    " --seed 763931883 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"Duotone trippy 1 9 6 0 s lsd concept illustration of {target_token}. volumetric lighting. golden ratio accidental renaissance. by sachin teng and sergey kolesov and ruan jia and heng z. graffiti art, scifi, fantasy, hyper detailed. octane render. concept art. trending on artstation.\" \\\n",
-    " --outloc \"{target_name}_trippy\" \\\n",
-    " --outdir \"outputs/{target_name}_trippy\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
     " --seed 1694397999 \\\n",
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
     " --ckpt {model_path} \\\n",
-    " --prompt \"Portrait of {target_token} as beautiful elf, 8 k, ultra hd, highly detailed, by wlop, trending on artstation\n",
-    "\" \\\n",
+    " --prompt \"Portrait of {target_token} as beautiful elf, 8 k, ultra hd, highly detailed, by wlop, trending on artstation\" \\\n",
     " --outloc \"{target_name}_elf\" \\\n",
     " --outdir \"outputs/{target_name}_elf\""
    ]
@@ -545,44 +468,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 1694397999 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"digital photograph of {target_token} as a muppet. hyper realistic. super detailed. beautiful lighting. delicate felt. Puppet by Jim Henson.\" \\\n",
-    " --outloc \"{target_name}_muppet\" \\\n",
-    " --outdir \"outputs/{target_name}_muppet\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 1694397999 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"digital photograph of {target_token} as a professional wrestler. 80s colors. spandex. in the style of Wrestlemania. dramatic pose. super detailed 4k. theatrical stage lighting.\" \\\n",
-    " --outloc \"{target_name}_wrestler\" \\\n",
-    " --outdir \"outputs/{target_name}_wrestler\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     " !python scripts/stable_txt2img.py \\\n",
     " --ddim_eta 0.0 \\\n",
     " --n_samples {sample_n} \\\n",
@@ -594,25 +479,6 @@
     " --prompt \"{target_name} art nouveau portrait in the style of alphonse Mucha, digital painting, Alphonse Mucha\" \\\n",
     " --outloc \"{target_name}_nouveau\" \\\n",
     " --outdir \"outputs/{target_name}_nouveau\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " !python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 1694397999 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"painterly portrait of {target_name} as a pirate. digital painting. trending on artstation. By Greg Rutkowski\" \\\n",
-    " --outloc \"{target_name}_pirate\" \\\n",
-    " --outdir \"outputs/{target_name}_pirate\""
    ]
   },
   {
