cleanup(notebook): remove unwanted prompts

--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -389,6 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c01975db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,6 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "91577460",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,25 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 69 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"portrait of {target_token} cyberpunk neon - bordered cyborg, 7 0 mm focal length, by ilya kuvshinov, krenz cushart, Greg Rutkowski, trending on artstation sharp focus illustration, aesthetic, very inspirational, arthouse\" \\\n",
-    " --outloc \"{target_name}_cyborg\" \\\n",
-    " --outdir \"outputs/{target_name}_cyborg\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "1d9d6616",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c2a6228c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,6 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "89813f45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,6 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "377fc883",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,8 +501,7 @@
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
     " --ckpt {model_path} \\\n",
-    " --prompt \"Portrait of {target_token} as beautiful elf, 8 k, ultra hd, highly detailed, by wlop, trending on artstation\n",
-    "\" \\\n",
+    " --prompt \"Portrait of {target_token} as beautiful elf, 8 k, ultra hd, highly detailed, by wlop, trending on artstation\" \\\n",
     " --outloc \"{target_name}_elf\" \\\n",
     " --outdir \"outputs/{target_name}_elf\""
    ]
@@ -523,6 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4b553285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,44 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 1694397999 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"digital photograph of {target_token} as a muppet. hyper realistic. super detailed. beautiful lighting. delicate felt. Puppet by Jim Henson.\" \\\n",
-    " --outloc \"{target_name}_muppet\" \\\n",
-    " --outdir \"outputs/{target_name}_muppet\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 1694397999 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"digital photograph of {target_token} as a professional wrestler. 80s colors. spandex. in the style of Wrestlemania. dramatic pose. super detailed 4k. theatrical stage lighting.\" \\\n",
-    " --outloc \"{target_name}_wrestler\" \\\n",
-    " --outdir \"outputs/{target_name}_wrestler\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "e4a995fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,6 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dbcfedab",
    "metadata": {},
    "outputs": [],
    "source": [
