--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -89,7 +89,7 @@
    },
    "outputs": [],
    "source": [
-    "target_name = \"princessdiana\"\n",
+    "target_name = \"woman\"\n",
     "\n",
     "target_class = \"person\""
    ]
@@ -389,6 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c47b1379",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,6 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5704e8d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,6 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3435abee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,6 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a23647cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8714a999",
    "metadata": {},
    "outputs": [],
    "source": [
