--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -89,7 +89,7 @@
    },
    "outputs": [],
    "source": [
-    "target_name = \"woman\"\n",
+    "target_name = \"man\"\n",
     "\n",
     "target_class = \"person\""
    ]
@@ -211,7 +211,7 @@
    },
    "outputs": [],
    "source": [
-    "model_path = '/workspace/male/model.ckpt'\n",
+    "model_path = '/workspace/Dreambooth-Ion-Cannon/model.ckpt'\n",
     "valid_model_size = 4265380512 # doing this instead of SHA256 checksum, it's quicker\n",
     "\n",
     "already_exists = os.path.exists(model_path)\n",
@@ -230,7 +230,7 @@
     "\n",
     "    import multivolumefile\n",
     "    import py7zr\n",
-    "    with multivolumefile.open('/workspace/male/Stable-Diffusion-1.4/model.7z', mode='rb') as target_archive:\n",
+    "    with multivolumefile.open('/workspace/Dreambooth-Ion-Cannon/Stable-Diffusion-1.4/model.7z', mode='rb') as target_archive:\n",
     "        with py7zr.SevenZipFile(target_archive, 'r') as archive:\n",
     "            archive.extractall()\n",
     "    \n",
