--- a/dreambooth_ion_cannon.ipynb
+++ b/dreambooth_ion_cannon.ipynb
@@ -84,6 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ade63faf",
    "metadata": {
     "scrolled": true
    },
@@ -96,6 +97,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "82dfcccd",
    "metadata": {},
    "source": [
     "### If you do not want to adjust any of the optional parameters (see below)...\n",
@@ -107,6 +109,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b2736d9",
    "metadata": {},
    "source": [
     "---\n",
@@ -138,6 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "412f0278",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,6 +152,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e8cdb350",
    "metadata": {},
    "source": [
     "# Build Environment"
@@ -156,6 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4ed6ebf5",
    "metadata": {
     "id": "9e1bc458-091b-42f4-a125-c3f0df20f29d",
     "scrolled": true
@@ -198,6 +204,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c34722b",
    "metadata": {},
    "source": [
     "# Downloading/Reconstituting Stable Diffusion v1.4"
@@ -206,6 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b3f6ad64",
    "metadata": {
     "id": "dae11c10"
    },
@@ -240,6 +248,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "35637323",
    "metadata": {},
    "source": [
     "# Retrieving Regularisation Images"
@@ -248,6 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "56aecf67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,6 +269,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1eef5f98",
    "metadata": {
     "id": "ad4e50df"
    },
@@ -269,6 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f3e0f9e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,6 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c8d8852f",
    "metadata": {
     "id": "6fa5dd66-2ca0-4819-907e-802e25583ae6",
     "tags": []
@@ -302,6 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a2dfd4c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,6 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bc4b1b55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,6 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "daee29bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,6 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "37db1b4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,6 +358,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9fe5f62d",
    "metadata": {},
    "source": [
     "# Image Generation Variable Setup"
@@ -349,6 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c1a31c69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,6 +381,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "128e332e",
    "metadata": {},
    "source": [
     "# Regular Image Generation"
@@ -370,12 +390,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1d47c49b",
    "metadata": {},
    "outputs": [],
    "source": [
     "!python scripts/stable_txt2img.py \\\n",
     " --ddim_eta 0.0 \\\n",
-    " --n_samples 2 \\\n",
+    " --n_samples 5 \\\n",
     " --n_iter 2 \\\n",
     " --seed 42 \\\n",
     " --scale 10.0 \\\n",
@@ -397,7 +418,107 @@
     " --ddim_eta 0.0 \\\n",
     " --n_samples {sample_n} \\\n",
     " --n_iter {sample_n} \\\n",
-    " --seed 69 \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"a portrait of {target_token} as american civil patriot, with isolated musket and woods background, strong dark comic outlines, colorful american flag,  intricate, elegant, highly detailed, digital painting, artstation, concept art, smooth, sharp focus, 8k, illustration, art by artgerm and greg rutkowski and alphonse mucha\" \\\n",
+    " --outloc \"{target_name}_patriot\" \\\n",
+    " --outdir \"outputs/{target_name}_patriot\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c01975db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"a viking portrait of {target_token} as nordic man, isolated swords and shields, red and blue, strong dark comic outlines, 7 0 mm focal length, by ilya kuvshinov, krenz cushart, Greg Rutkowski, trending on artstation sharp focus illustration, aesthetic, very inspirational, arthouse\" \\\n",
+    " --outloc \"{target_name}_nordic_intense\" \\\n",
+    " --outdir \"outputs/{target_name}_nordic_intense\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c01975db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"a viking portrait of {target_token} as nordic man, with isolated axe and shield, strong dark comic outlines, colorful, psychedelic, intricate, elegant, highly detailed, digital painting, artstation, concept art, smooth, sharp focus, illustration, art by artgerm and greg rutkowski and alphonse mucha\" \\\n",
+    " --outloc \"{target_name}_nordic\" \\\n",
+    " --outdir \"outputs/{target_name}_nordic\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c01975db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"a science fiction portrait of {target_token}, isolated technology and ethereum, cryptography symbols, include space travel, colorful, highly detailed, smooth, sharp focus, illustration, art by artgerm and greg rutkowski\" \\\n",
+    " --outloc \"{target_name}_scifi\" \\\n",
+    " --outdir \"outputs/{target_name}_scifi\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c01975db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
+    " --scale 10.0 \\\n",
+    " --ddim_steps 100 \\\n",
+    " --ckpt {model_path} \\\n",
+    " --prompt \"a fantasy steampunk portrait of {target_token}, isolated welding and jewelery, colorful, highly detailed, smooth, sharp focus, illustration, art by artgerm and greg rutkowski\" \\\n",
+    " --outloc \"{target_name}_steampunk\" \\\n",
+    " --outdir \"outputs/{target_name}_steampunk\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c01975db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python scripts/stable_txt2img.py \\\n",
+    " --ddim_eta 0.0 \\\n",
+    " --n_samples {sample_n} \\\n",
+    " --n_iter {sample_n} \\\n",
+    " --seed 1694397999 \\\n",
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
     " --ckpt {model_path} \\\n",
@@ -417,7 +538,7 @@
     " --ddim_eta 0.0 \\\n",
     " --n_samples {sample_n} \\\n",
     " --n_iter {sample_n} \\\n",
-    " --seed 69 \\\n",
+    " --seed 1694397999 \\\n",
     " --scale 10.0 \\\n",
     " --ddim_steps 100 \\\n",
     " --ckpt {model_path} \\\n",
@@ -429,65 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "377fc883",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 1694397999 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"Portrait of {target_token} as beautiful elf, 8 k, ultra hd, highly detailed, by wlop, trending on artstation\" \\\n",
-    " --outloc \"{target_name}_elf\" \\\n",
-    " --outdir \"outputs/{target_name}_elf\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbcfedab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " !python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 1694397999 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"painterly portrait of {target_name} as a pirate. digital painting. trending on artstation. By Greg Rutkowski\" \\\n",
-    " --outloc \"{target_name}_pirate\" \\\n",
-    " --outdir \"outputs/{target_name}_pirate\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " !python scripts/stable_txt2img.py \\\n",
-    " --ddim_eta 0.0 \\\n",
-    " --n_samples {sample_n} \\\n",
-    " --n_iter {sample_n} \\\n",
-    " --seed 1694397999 \\\n",
-    " --scale 10.0 \\\n",
-    " --ddim_steps 100 \\\n",
-    " --ckpt {model_path} \\\n",
-    " --prompt \"painting of {target_name} riding a unicorn leaping over a rainbow. swinging a sword, wearing armor. fantastical. Black night with galaxies and stars. Star dust trail. ultrafine detail. 8k. 4k. digital painting. trending on artstation. Painted by Courtney Karp and Greg Rutkowski.\" \\\n",
-    " --outloc \"{target_name}_unicorn\" \\\n",
-    " --outdir \"outputs/{target_name}_unicorn\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "94f977ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,6 +569,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7831bb36",
    "metadata": {},
    "source": [
     "# Spicy Mode Image Generation\n",
@@ -528,9 +592,9 @@
     "     --scale 10.0 \\\n",
     "     --ddim_steps 100 \\\n",
     "     --ckpt {model_path} \\\n",
-    "     --prompt \"A beautiful {target_name} burlesque dancer on a stage, spotlight, highly detailed, digital painting, artstation, concept art, smooth, sharp focus, illustration, cinematic lighting, art by artgerm and greg rutkowski and alphonse mucha\" \\\n",
-    "     --outloc \"{target_name}_burlesque\" \\\n",
-    "     --outdir \"outputs/{target_name}_burlesque\""
+    "     --prompt \"A beautiful {target_name} stripper dancer on a stage, naked breasts, spotlight, highly detailed, digital painting, artstation, smooth, sharp focus, illustration, cinematic lighting, art by artgerm and greg rutkowski and alphonse mucha\" \\\n",
+    "     --outloc \"{target_name}_stripping\" \\\n",
+    "     --outdir \"outputs/{target_name}_stripping\""
    ]
   }
  ],
